--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        background-color: black;
       }
     </style>
   </head>
@@ -31,6 +32,8 @@
   <!-- Load the sketch -->
   <script src="./sketch.js"></script>
   <script src="./particle.js"></script>
+
+  
 
   <!-- End HTML -->
 </html>
